lua-factory: Protect against broken sources

If no fetches are pending and grl.callback() was not called,
throw a warning, and clean up after the source to avoid
inconsistent states in front-ends.

https://bugzilla.gnome.org/show_bug.cgi?id=725209